--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 
             <div class="metric-card change-card">
                 <span class="metric-label">CAMBIO DIARIO</span>
-                <p class="metric-value" id="change-value">Cargando...</p>
-                <span class="metric-percentage" id="change-percentage"></span>
+                <p class="metric-value" id="change">Cargando...</p>
             </div>
 
             <div class="metric-card volume-card">
